<resources>
    <string name="app_name">Espetaculos_MZ</string>
    <string name="espetaculos_cultutrais_title">Espetaculos Cultutrais</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign Up</string>
    <string name="textview">Home</string>
    <string name="button">Ver Info</string>
    <string name="username">Name</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_espectaculo">Registrar Espectaculo</string>
    <string name="registo_de_espectaculo">Registo de Espectaculo</string>
    <string name="nome_do_espectaculo">Nome do Espectaculo</string>
    <string name="promotor">Promotor</string>
    <string name="local">Local</string>
    <string name="quantidade_de_bilhetes">Quantidade de Bilhetes</string>
    <string name="preco">Preco</string>

    <string name="descricao_do_espectaculo">Descricao do Espectaculo</string>
    <string name="espectaculos">Espectaculos</string>
    <string name="todo">TODO</string>
    <string name="quantidade">Quantidade:</string>
    <string name="decrement">-</string>
    <string name="pagar">Pagar</string>
    <string name="increment">+</string>
    <string name="nr_mpesa">Nr. Mpesa</string>

</resources>